2010-10-29  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* configure.ac: Add include/loopformula/Makefile.

	* include/network/Makefile.am: Remove network relative path.
	* include/Makefile.am: Remove Match.h

2010-10-29  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* include/dyndmcs/Makefile.am (noinst_HEADERS): Remove dyndmcs
	relative path.

	* configure.ac (AC_CONFIG_FILES): Add include/dmcs/Makefile.

2010-10-18  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* configure.ac: Add locations of the new Makefile files.

	* src/dynGen.cpp: Now also generate local kb for the student
	example.

	* src/staticGen.cpp: Use topology constant name instead of plain
	number.

	* include/Makefile.am: Adapt Makefile.am to new organization of
	header files.

	* src/genTest.cpp: Remove.

	* include/dyndmcs/Makefile.am: New file.
	* include/generator/Makefile.cam: Likewise.
	* include/parser/Makefile.am: Likewise.
	* include/network/Makefile.am: Likewise.
	* include/loopformula/Makefile.am: Likewise.
	* include/dmcs/Makefile.am: Likewise.

	* include/CommandTypeFactory.h: Adapt including header files.
	* include/network/Handler.h: Likewise.
	* include/network/Server.h: Likewise.
	* include/ClaspProcess.h: Likewise.
	* include/CommandType.h: Likewise.
	* include/SatSolver.tcc: Likewise.
	* include/Message.h: Likewise.
	* src/ClaspResultOnlineParser.cpp: Likewise.
	* src/DynamicConfiguration.cpp: Likewise.
	* src/Instantiator.cpp: Likewise.
	* src/OptDMCS.cpp: Likewise.
	* src/PrimitiveDMCS.cpp: Likewise.
	* src/Server.cpp: Likewise.
	* src/dmcsc.cpp: Likewise.
	* src/dmcsd.cpp: Likewise.
	* src/BaseDMCS.cpp: Likewise.
	* src/CNFLocalLoopFormulaBuilder.cpp: Likewise.
	* src/IMPLocalLoopFormulaBuilder.cpp: Likewise.
	* src/LocalLoopFormulaBuilder.cpp: Likewise.
	* src/tests/testClasp.cpp: Likewise.
	* src/tests/testParser.cpp: Likewise.
	* src/tests/testResult.cpp: Likewise.
	* src/tests/testTranslation.cpp: Likewise.

	* include/loopformula: New sub dir.